# fastapi-shop

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/alembic/versions/: 32f823c0244b_add_users.py  cfb0d80d744c_add_products.py
backend/app/api/routers/: products.py
backend/app/crud/: product.py  user.py
backend/app/models/: __init__.py  product.py  user.py
backend/app/models/mixins/: timestamp.py
backend/app/schemas/: product.py
backend/app/services/: elasticsearch.py
backend/app/static/css/: mystyle.css
backend/app/templates/home/: index.html
backend/app/templates/include/: sidebar.html  topnav.html
backend/app/web/routers/: home.py
backend/data/: products.json
backend/scripts/: add_products.py  sync_products.py
backend/tests/crud/: test_user.py
