[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.11.1",
    "asyncpg>=0.30.0",
    "authlib>=1.6.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "ipython>=8.36.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "lxml>=5.4.0",
    "openai>=1.82.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "types-requests>=2.32.0.20250515",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "expects>=0.9.0",
    "ruff>=0.11.11",
    "types-passlib>=1.7.7.20250516",
]
